--- a/src/theme/globals/variables.scss
+++ b/src/theme/globals/variables.scss
@@ -1,6 +1,7 @@
 $app-bg-primary: #001219;
 $card-bg-primary: #001D29;
 $app-text-primary: white;
+$app-text-secondary: rgba(255, 255, 255, 0.6);
 $app-gradient: linear-gradient(94.42deg, #F53B3B -18.78%, #256FC3 21.41%, #B929DD 57.22%, #FF9D00 105.58%);
 $responsive-width: 1400px;
 $link-gradient: linear-gradient(103.28deg, #256FC3 0.5%, #F318FF 30%, #DC5217 98%);
