--- a/src/app/core/main-layout/header/header.component.html
+++ b/src/app/core/main-layout/header/header.component.html
@@ -43,6 +43,14 @@
         </li>
 
         <li>
+          <a [routerLink]="AppRoutes.ABOUT_US"
+             (click)="updateCurrentRoute()" routerLinkActive="active-link"
+             class="block py-2 px-3 lg:p-0 active-link" data-close-menu>
+            About Us
+          </a>
+        </li>
+
+        <li>
           <a class="block py-2 px-3 lg:p-0" data-close-menu [href]="docsLink" target="_blank">
             Developer Guide
           </a>
