--- a/src/app/pages/pricing/pricing.component.html
+++ b/src/app/pages/pricing/pricing.component.html
@@ -119,7 +119,7 @@
           </div>
 
           <div class="card-footer">
-            <button mat-flat-button class="btn-fill" (click)="openContactUsDialog()">
+            <button mat-flat-button class="bg-[#9ebbf3] text-background" (click)="openContactUsDialog()">
               Contact Sales
             </button>
           </div>
