--- a/src/app/pages/pricing/pricing.component.html
+++ b/src/app/pages/pricing/pricing.component.html
@@ -125,6 +125,103 @@
           </div>
         </div>
       </div>
+
+      <div class="text-center md:mt-30 mt-25">
+        <h1 class="text-3xl sm:text-4xl font-bold mb-10">ChottuLink vs Competitors - Deeplinking cost at &#64;150k MAUs
+        </h1>
+        <div class="p-3 rounded-2xl bg-[#001D29]">
+          <div class="table-wrapper p-0 sm:p-3">
+            <table mat-table class="table rounded-3xl p-3" [dataSource]="competitorList">
+              <tr mat-header-row *matHeaderRowDef="columnList; sticky: true"></tr>
+              <tr mat-row *matRowDef="let row; columns: columnList;"></tr>
+
+              <!-- Platform Column -->
+              <ng-container matColumnDef="platform" sticky>
+                <th mat-header-cell *matHeaderCellDef class="text-lg sm:text-xl"> Platform</th>
+                <td mat-cell *matCellDef="let element" class="text-base sm:text-lg">
+                  {{ element.platform || '---' }}
+                </td>
+              </ng-container>
+
+              <!-- cost Column -->
+              <ng-container matColumnDef="monthlyCost">
+                <th mat-header-cell *matHeaderCellDef class="text-lg sm:text-xl"> Monthly Cost (150k MAU)</th>
+                <td mat-cell *matCellDef="let element" class="text-base sm:text-lg">
+                  {{ element.monthlyCost || '---' }}
+                </td>
+              </ng-container>
+
+              <!-- saving column -->
+              <ng-container matColumnDef="savings">
+                <th mat-header-cell *matHeaderCellDef class="text-lg sm:text-xl"> Savings With ChottuLink</th>
+                <td mat-cell *matCellDef="let element" class="text-base sm:text-lg">
+                  {{ element.savings || '---' }}
+                </td>
+              </ng-container>
+            </table>
+          </div>
+        </div>
+      </div>
+
+      <div class="mt-32 md:mt-40">
+        <h1 class="text-3xl sm:text-4xl font-bold mb-10">
+          Transparent Pricing that doesn't make you think twice.
+        </h1>
+        <div class="p-4 rounded-2xl text-start sm:p-10 border-2 border-gray-400">
+          @if (isBrowser) {
+            <p class="sm:text-lg" >How many monthly active users?
+              <icon src="./assets/images/icons/question.svg" size="18" ngSkipHydration
+                    #tooltip="matTooltip"
+                    matTooltip="ChottuLink calculates Monthly Active Users (MAU) based on the number of unique users who
+                 have opened the app at least once, from the 1st to the last day of each month, based on UTC. The MAUs shown on chottuLink would be roughly similar to the MAUs you get to see in your Google Analytics/Firebase."
+                    (click)="tooltip.toggle()"
+                    [matTooltipPosition]="tooltipPosition"></icon>
+            </p>
+          }
+
+          <div class="relative w-full pb-6 px-3 md:px-0 pt-5">
+            <mat-slider class="w-full! m-0!" min="0" [max]="maxMau" discrete [displayWith]="formatLabel" step="50000">
+              <input matSliderThumb class="w-full" [(ngModel)]="mau" #Mau="ngModel">
+            </mat-slider>
+
+            <div class="absolute left-0 right-0 mt-1 text-xs mx-3 md:mx-0">
+              @for (label of labels; track label; let i = $index) {
+                <span class="absolute text-tertiary -translate-x-1/2 text-start whitespace-nowrap"
+                      [style.left.%]="(i / (labels.length - 1)) * 100">
+              {{ label }}</span>
+              }
+            </div>
+          </div>
+
+          <div class="mt-6 flex justify-center items-center sm:flex-row flex-col sm:gap-10 gap-5">
+            <div class="text-center flex-1">
+              <h3 class="text-xl">ChottuLink</h3><sub>(Transparent Pricing)</sub>
+              <h2 class="text-3xl sm:text-4xl mt-3">
+                  <span class="font-medium">
+                    <span>{{getPriceForChottuLink()}}</span><span class="text-lg">/month</span>
+                  </span>
+              </h2>
+            </div>
+
+            <div
+              class="sm:mt-2 w-max py-3 px-4 flex flex-col justify-center items-center border border-gray-800 rounded-xl w-[150px] bg-[#001D29]">
+              <h6 class="text-lg font-medium text-tertiary">vs</h6>
+            </div>
+
+            <div class="text-center flex-1">
+              <h3 class="text-xl">Branch.io</h3><sub>(Our Competitor)</sub>
+              <h2 class="text-3xl sm:text-4xl mt-3">
+                  <span class="font-medium">
+                    <span>{{getPriceForBranch()}}</span><span class="text-lg">/month</span>
+                  </span>
+              </h2>
+            </div>
+          </div>
+
+          <h6 class="mt-10 text-tertiary">ChottuLink pricing doesn't multiply as your MAUs grow,
+            We ensure you never get a surprise bill.</h6>
+        </div>
+      </div>
     } @else {
       <no-content/>
     }
