--- a/src/theme/core/header.scss
+++ b/src/theme/core/header.scss
@@ -34,5 +34,6 @@
   background-clip: text;
   -webkit-text-fill-color: transparent;
   width: fit-content;
+  background-size: 250%;
   margin: auto;
 }
