--- a/src/theme/styles.scss
+++ b/src/theme/styles.scss
@@ -94,3 +94,11 @@ button {
   justify-content: center;
 }
 
+.text-tertiary {
+
+  color: $app-text-tertiary;
+}
+
+.font-secondary {
+  font-family: "Quicksand", sans-serif;
+}
