--- a/src/theme/core/card.scss
+++ b/src/theme/core/card.scss
@@ -98,7 +98,7 @@
 
       .card-description {
 
-        color: $app-text-secondary;
+        color: $app-text-tertiary;
       }
     }
   }
@@ -106,6 +106,7 @@
   .card-body {
     padding-block-end: 1rem;
     height: 100%;
+    flex-grow: 1;
 
     h6 {
       font-weight: 600;
@@ -144,7 +145,7 @@
       font-style: italic;
       font-weight: 600;
       margin-bottom: 0;
-      color: $app-text-secondary;;
+      color: $app-text-tertiary;;
     }
   }
 
